# AutoNav_KIT

./: README.md
data/map/: topology_map.txt
rviz/: clothpath_palnner.rviz  ptah_planner.rviz  showloamconfig.rviz
script/: README.md  install-code.sh  kill.sh  run-all.sh  run-data.sh  run-gps.sh
src/: README.md
src/Base_control/: CMakeLists.txt  package.xml  readme（Controler）.txt
src/Base_control/launch/: base_control.launch  mobile_control.launch
src/Base_control/src/: Base_Service.cpp  Client1.cpp
src/Base_control/srv/: ControlCmd.srv
src/Insrob_server/: CMakeLists.txt  package.xml  readme.txt
src/Insrob_server/include/Insrob_server/: global.h  global.h~  orient.h  vpoint.h  vsocket.h
src/Insrob_server/msg/: Speed.msg
src/Insrob_server/src/: client.cpp  orient.cpp  vsocket.cpp
src/dut_mr_drv/: CMakeLists.txt  package.xml  readme.txt
src/dut_mr_drv/include/dut_mr_drv/: dut_mr_msg.h  model.h  motor.h  rs232.h
src/dut_mr_drv/launch/: dur_mr_cali.launch  dur_mr_drv.launch
src/dut_mr_drv/msg/: MotorState.msg  MrHwInfo.msg  RawMotorCmd.msg
src/dut_mr_drv/src/: base_cali.cpp  dut_mr_msg.cpp  main.cpp  model.cpp  motor.cpp  rs232.cpp
src/gnss_driver/: CMakeLists.txt
src/gnss_driver/include/: gps_heading.h  hque.h
src/gnss_driver/src/: gnss_driver.cpp  gnss_process.hpp
src/gps2odometry/: CMakeLists.txt  package.xml
src/gps2odometry/launch/: gps.launch
src/gps2odometry/src/: main.cpp
src/laser_slam_algorithm/: CMakeLists.txt  mapping.launch  package.xml  relocalization.launch
src/laser_slam_algorithm/src/: mapping.cpp  odom.cpp  register.cpp  relocalization.cpp  transform.cpp
src/laser_slam_algorithm/srv/: srv_record_map.srv  srv_relocalization.srv
src/local_map/: CMakeLists.txt  package.xml  readme.txt
src/local_map/include/local_map/: map_builder.h  map_ray_caster.h  parameter.h
src/local_map/src/: main.cpp  map_builder.cpp  map_ray_caster.cpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/include/path_planner/: Bspline.h  Bspline_Mtrajfinder.h  Clothoid_arcfinder.h  Pose.h  base.h  computetool.h  dubins.h  global_path.h  point.h  smooth.h
src/path_planner/launch/: path_planner.launch
src/path_planner/meshes/meshes/: Untitled Document
src/path_planner/src/: Bspline.cpp  Bspline_Mtrajfinder.cpp  Clothoid_arcfinder.cpp  computetool.cpp  dubins.cpp  global_path.cpp  main.cpp  point.cpp  smooth.cpp
src/xsens_imu_driver/: README
src/xsens_imu_driver/src/: main.cpp
