<?xml version="1.0"?>
<package format="2">
  <name>Base_control</name>
  <version>0.0.0</version>
  <description>The Base_control package</description>

  <maintainer email="raoyuan@todo.todo">raoyuan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>    <!--自定义 -->
  <exec_depend>message_runtime</exec_depend>           <!--自定义 -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
