<?xml version="1.0"?>
<package format="2">
  <name>laser_slam_algorithm</name>
  <version>0.0.1</version>
  <description>The laser_slam_algorithm package</description>

  <maintainer email="navi-plus@todo.todo">Navi+</maintainer>
  <license>Navi+</license>
  <author>Navi+</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  

  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
  
</package>
