<?xml version="1.0"?>
<package format="2">
	<name>local_map</name>
	<version>0.0.0</version>
	<description>local_map</description>
	<maintainer email="example@163.com">ds</maintainer>
	<license>BSD</license>
	<author>ds</author>
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>	
	<build_depend>message_generation</build_depend>
	
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
  <export>

  </export>
</package>
