<?xml version="1.0"?>
<package format="2">
	<name>path_planner</name>
	<version>0.0.0</version>
	<description>path_planner</description>
	<maintainer email="example@163.com">ds</maintainer>
	<license>BSD</license>
	<author>ds</author>
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>	
	<build_depend>message_generation</build_depend>
	
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>

	<build_depend>Base_control</build_depend>
    <build_export_depend>Base_control</build_export_depend>
    <exec_depend>Base_control</exec_depend>

  <export>

  </export>
</package>
